@@ -1,3 +1,8 @@
+2016-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-sankei.el (shimbun-sankei-clear-contents):
+	Improve the way to find the article end.
+
 2016-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-nikkangendai.el (shimbun-nikkangendai-get-headers-top): Work.
